Fixed image wrapping on devices

--- a/src/components/styles/level.scss
+++ b/src/components/styles/level.scss
@@ -1,4 +1,8 @@
+.level-img-wrapper {
+  max-width: 100vw;
+}
+
 .level-img {
-  width: 1920px;
+  max-width: 100%;
   height: auto;
 }
