--- a/src/components/styles/main.scss
+++ b/src/components/styles/main.scss
@@ -2,7 +2,6 @@ body {
   box-sizing: border-box;
   font-family: 'Kdam Thmor Pro', sans-serif;
   background-color: #f3f4f6;
-  max-width: 100vw;
 }
 
 a {
